<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity"
    android:orientation="vertical"
    android:background="@drawable/bg1"
    android:paddingBottom="30dp">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="1"
        android:background="@drawable/basliq">


        <ImageView
            android:layout_toLeftOf="@+id/girisbasliq"
            android:layout_toStartOf="@+id/girisbasliq"
            android:layout_width="34dp"
            android:layout_height="34dp"
            android:src="@drawable/ic_flag_black_24dp"
            android:layout_centerVertical="true"
            android:layout_marginRight="8dp"
            android:layout_marginEnd="8dp"/>

        <ImageView
            android:layout_toRightOf="@+id/girisbasliq"
            android:layout_toEndOf="@+id/girisbasliq"
            android:layout_width="34dp"
            android:layout_height="34dp"
            android:src="@drawable/ic_flag_black_24dp"
            android:layout_centerVertical="true"
            android:layout_marginLeft="6dp"
            android:layout_marginStart="6dp"/>

        <TextView
            android:id="@+id/girisbasliq"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/flags"
            android:gravity="center"
            android:textStyle="bold|italic"
            android:textSize="35sp"
            android:textColor="#fff"
            android:fontFamily="serif"
            android:shadowColor="#222"
            android:shadowDx="3"
            android:shadowDy="3"
            android:shadowRadius="3"
            android:layout_centerInParent="true"
            android:padding="5dp"

            />



    </RelativeLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="1">

        <RelativeLayout
            android:id="@+id/avrupa"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:background="@drawable/girisbutton"
            android:layout_margin="5dp">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/avrupa"
                android:textColor="#fff"
                android:textSize="16sp"
                android:textStyle="bold|italic"
                android:layout_alignParentTop="true"
                android:layout_alignParentLeft="true"
                android:layout_alignParentStart="true"/>
            <ImageView
                android:layout_width="55dp"
                android:layout_height="55dp"
                android:src="@drawable/icon_avropa"
                android:layout_alignParentBottom="true"
                android:layout_alignParentRight="true"
                android:layout_alignParentEnd="true"/>

        </RelativeLayout>

        <RelativeLayout
            android:id="@+id/asya"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:background="@drawable/girisbutton"
            android:layout_margin="5dp">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/asya"
                android:textColor="#fff"
                android:textSize="16sp"
                android:textStyle="bold|italic"
                android:layout_alignParentTop="true"
                android:layout_alignParentLeft="true"
                android:layout_alignParentStart="true"/>
            <ImageView
                android:layout_width="55dp"
                android:layout_height="55dp"
                android:src="@drawable/icon_asya"
                android:layout_alignParentBottom="true"
                android:layout_alignParentRight="true"
                android:layout_alignParentEnd="true"/>

        </RelativeLayout>


    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="1">

        <RelativeLayout
            android:id="@+id/kamerika"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:background="@drawable/girisbutton"
            android:layout_margin="5dp">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/kuzey_amerika"
                android:textColor="#fff"
                android:textSize="16sp"
                android:textStyle="bold|italic"
                android:layout_alignParentTop="true"
                android:layout_alignParentLeft="true"
                android:layout_alignParentStart="true"/>
            <ImageView
                android:layout_width="55dp"
                android:layout_height="55dp"
                android:src="@drawable/icon_kamerika"
                android:layout_alignParentBottom="true"
                android:layout_alignParentRight="true"
                android:layout_alignParentEnd="true"/>

        </RelativeLayout>

        <RelativeLayout
            android:id="@+id/gamerika"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:background="@drawable/girisbutton"
            android:layout_margin="5dp">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/guney_amerika"
                android:textColor="#fff"
                android:textSize="16sp"
                android:textStyle="bold|italic"
                android:layout_alignParentTop="true"
                android:layout_alignParentLeft="true"
                android:layout_alignParentStart="true"/>
            <ImageView
                android:layout_width="55dp"
                android:layout_height="55dp"
                android:src="@drawable/icon_gamerika"
                android:layout_alignParentBottom="true"
                android:layout_alignParentRight="true"
                android:layout_alignParentEnd="true"/>

        </RelativeLayout>


    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="1">

        <RelativeLayout
            android:id="@+id/afrika"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:background="@drawable/girisbutton"
            android:layout_margin="5dp">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/afrika"
                android:textColor="#fff"
                android:textSize="16sp"
                android:textStyle="bold|italic"
                android:layout_alignParentTop="true"
                android:layout_alignParentLeft="true"
                android:layout_alignParentStart="true"/>
            <ImageView
                android:layout_width="55dp"
                android:layout_height="55dp"
                android:src="@drawable/icon_afrika"
                android:layout_alignParentBottom="true"
                android:layout_alignParentRight="true"
                android:layout_alignParentEnd="true"/>

        </RelativeLayout>

        <RelativeLayout
            android:id="@+id/avustralya"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:background="@drawable/girisbutton"
            android:layout_margin="5dp">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/avustralya"
                android:textColor="#fff"
                android:textSize="16sp"
                android:textStyle="bold|italic"
                android:layout_alignParentTop="true"
                android:layout_alignParentLeft="true"
                android:layout_alignParentStart="true"/>
            <ImageView
                android:layout_width="55dp"
                android:layout_height="55dp"
                android:src="@drawable/icon_avustralya"
                android:layout_alignParentBottom="true"
                android:layout_alignParentRight="true"
                android:layout_alignParentEnd="true"/>

        </RelativeLayout>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="1"
        >

        <RelativeLayout
            android:id="@+id/hepsi"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:background="@drawable/girisbutton"
            android:layout_margin="5dp">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/earth"
                android:textColor="#fff"
                android:textSize="16sp"
                android:textStyle="bold|italic"
                android:layout_alignParentTop="true"
                android:layout_alignParentLeft="true"
                android:layout_alignParentStart="true"/>
            <ImageView
                android:layout_width="55dp"
                android:layout_height="55dp"
                android:src="@drawable/dunya"
                android:layout_alignParentBottom="true"
                android:layout_alignParentRight="true"
                android:layout_alignParentEnd="true"/>

        </RelativeLayout>
        <RelativeLayout
            android:id="@+id/ayarlar"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:background="@drawable/girisbutton"
            android:layout_margin="5dp">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/ayarlar"
                android:textColor="#fff"
                android:textSize="16sp"
                android:textStyle="bold|italic"
                android:layout_alignParentTop="true"
                android:layout_alignParentLeft="true"
                android:layout_alignParentStart="true"/>
            <ImageView
                android:layout_width="55dp"
                android:layout_height="55dp"
                android:background="@drawable/ic_settings_black_24dp"
                android:layout_alignParentBottom="true"
                android:layout_alignParentRight="true"
                android:layout_alignParentEnd="true"/>

        </RelativeLayout>

    </LinearLayout>



</LinearLayout>